# linuxshot

./: .gitignore  Makefile  README.md  pyproject.toml  setup.sh  uninstall.sh
.github/workflows/: ci.yml
aur/: .SRCINFO  PKGBUILD
docs/: FLATHUB.md
flatpak/: io.github.taintedangel.linuxshot.yml
linuxshot/: __init__.py  __main__.py  app.py  capture.py  clipboard.py  colorpick.py  config.py  history.py  imgur_auth.py  notify.py  ocr.py  portal.py  recording.py  redact.py  shortcuts.py  tray.py  upload.py  utils.py
linuxshot/gui/: __init__.py  editor.py  icons.py  main_window.py  pin.py  settings.py  tray.py
linuxshot/ui/: main_window.py
resources/: io.github.taintedangel.linuxshot.desktop  io.github.taintedangel.linuxshot.metainfo.xml  linuxshot-autostart.desktop  linuxshot.desktop
tests/: conftest.py  test_app.py  test_capture.py  test_cli.py  test_config.py  test_history.py  test_recording.py  test_redact.py  test_tools.py  test_upload.py  test_utils.py
