[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "linuxshot"
version = "1.0.0"
description = "A ShareX-inspired screenshot and upload tool for Linux"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "LinuxShot Contributors"},
]
keywords = ["screenshot", "screen-capture", "upload", "imgur", "linux", "sharex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]
dependencies = [
    "PyGObject>=3.42.0",
    "Pillow>=9.0.0",
    "requests>=2.28.0",
]

[project.scripts]
linuxshot = "linuxshot.__main__:main"

[project.urls]
Homepage = "https://github.com/TaintedAngel/linuxshot"
Repository = "https://github.com/TaintedAngel/linuxshot"

[tool.setuptools.packages.find]
include = ["linuxshot*"]
