[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linuxshot"
version = "2.1.0"
description = "A ShareX-inspired screenshot and upload tool for Linux"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "LinuxShot Contributors"},
]
keywords = ["screenshot", "screen-capture", "upload", "imgbb", "linux", "sharex"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]
dependencies = [
    "requests>=2.28.0",
    "PySide6>=6.5.0",
    "PyGObject>=3.42.0",
    "dbus-python>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
linuxshot = "linuxshot.__main__:main"

[project.urls]
Homepage = "https://github.com/TaintedAngel/linuxshot"
Repository = "https://github.com/TaintedAngel/linuxshot"
Issues = "https://github.com/TaintedAngel/linuxshot/issues"

[tool.setuptools.packages.find]
include = ["linuxshot*"]

[tool.setuptools.package-data]
linuxshot = ["resources/*.svg"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
